# transcribing_service

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py  silences.py  whisper_funcs.py
src/custom_classes/: audio.py  speech.py
src/routers/: audio.py  speech.py
src/user_management/: db.py  users.py
src/utils/: alignment.py  plotting.py
