[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mp_whisper"}]

[tool.poetry.dependencies]
python = "~3.9"
whisper-timestamped = {git = "https://github.com/linto-ai/whisper-timestamped"}
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
