[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.9"
whisper-timestamped = {git = "https://github.com/linto-ai/whisper-timestamped"}
numpy = "1.23.5"
auditok = "^0.2.0"
pydub = "^0.25.1"
matplotlib = "^3.7.1"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
