[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.9"
whisper-timestamped = {git = "https://github.com/linto-ai/whisper-timestamped", rev="068ac07"}
numpy = "1.23.5"
auditok = "^0.2.0"
pydub = "^0.25.1"
matplotlib = "^3.7.1"
pyqt5 = "^5.15.9"
fastapi = "^0.95.1"
python-multipart = "^0.0.6"
uvicorn = "^0.21.1"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
